--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,21 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.asm-5.2.jar=lib_struts2\\asm-5.2.jar
+file.reference.asm-commons-5.2.jar=lib_struts2\\asm-commons-5.2.jar
+file.reference.commons-collections-3.2.2.jar=lib_struts2\\commons-collections-3.2.2.jar
+file.reference.commons-fileupload-1.4.jar=lib_struts2\\commons-fileupload-1.4.jar
+file.reference.commons-io-2.6.jar=lib_struts2\\commons-io-2.6.jar
+file.reference.commons-lang-2.4.jar=lib_struts2\\commons-lang-2.4.jar
+file.reference.commons-lang3-3.8.1.jar=lib_struts2\\commons-lang3-3.8.1.jar
+file.reference.commons-logging-1.2.jar=lib_struts2\\commons-logging-1.2.jar
+file.reference.freemarker-2.3.28.jar=lib_struts2\\freemarker-2.3.28.jar
+file.reference.javassist-3.20.0-GA.jar=lib_struts2\\javassist-3.20.0-GA.jar
+file.reference.log4j-api-2.11.1.jar=lib_struts2\\log4j-api-2.11.1.jar
+file.reference.ognl-3.1.21.jar=lib_struts2\\ognl-3.1.21.jar
+file.reference.struts2-convention-plugin-2.5.20.jar=lib_struts2\\struts2-convention-plugin-2.5.20.jar
+file.reference.struts2-core-2.5.20.jar=lib_struts2\\struts2-core-2.5.20.jar
+file.reference.xwork-core-2.3.12.jar=lib_struts2\\xwork-core-2.3.12.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -36,7 +51,22 @@ j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.12.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.asm-5.2.jar}:\
+    ${file.reference.asm-commons-5.2.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-fileupload-1.4.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-lang-2.4.jar}:\
+    ${file.reference.commons-lang3-3.8.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.freemarker-2.3.28.jar}:\
+    ${file.reference.javassist-3.20.0-GA.jar}:\
+    ${file.reference.log4j-api-2.11.1.jar}:\
+    ${file.reference.ognl-3.1.21.jar}:\
+    ${file.reference.struts2-convention-plugin-2.5.20.jar}:\
+    ${file.reference.struts2-core-2.5.20.jar}:\
+    ${file.reference.xwork-core-2.3.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
