Agregue la clase conexion con mysql

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.commons-logging-1.2.jar=lib_struts2\\commons-logging-1.2.jar
 file.reference.freemarker-2.3.28.jar=lib_struts2\\freemarker-2.3.28.jar
 file.reference.javassist-3.20.0-GA.jar=lib_struts2\\javassist-3.20.0-GA.jar
 file.reference.log4j-api-2.11.1.jar=lib_struts2\\log4j-api-2.11.1.jar
+file.reference.mysql-connector-java-5.1.47.jar=mysql-connector-java-5.1.47.jar
 file.reference.ognl-3.1.21.jar=lib_struts2\\ognl-3.1.21.jar
 file.reference.struts2-convention-plugin-2.5.20.jar=lib_struts2\\struts2-convention-plugin-2.5.20.jar
 file.reference.struts2-core-2.5.20.jar=lib_struts2\\struts2-core-2.5.20.jar
@@ -66,7 +67,8 @@ javac.classpath=\
     ${file.reference.ognl-3.1.21.jar}:\
     ${file.reference.struts2-convention-plugin-2.5.20.jar}:\
     ${file.reference.struts2-core-2.5.20.jar}:\
-    ${file.reference.xwork-core-2.3.12.jar}
+    ${file.reference.xwork-core-2.3.12.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
