Crud producto y proveedor terminado, agregue login y validaciones

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.asm-5.2.jar=lib_struts2\\asm-5.2.jar
 file.reference.asm-commons-5.2.jar=lib_struts2\\asm-commons-5.2.jar
+file.reference.commons-codec-1.14.jar=commons-codec-1.14.jar
 file.reference.commons-collections-3.2.2.jar=lib_struts2\\commons-collections-3.2.2.jar
 file.reference.commons-fileupload-1.4.jar=lib_struts2\\commons-fileupload-1.4.jar
 file.reference.commons-io-2.6.jar=lib_struts2\\commons-io-2.6.jar
@@ -43,6 +44,8 @@ file.reference.mysql-connector-java-5.1.47.jar=mysql-connector-java-5.1.47.jar
 file.reference.ognl-3.1.21.jar=lib_struts2\\ognl-3.1.21.jar
 file.reference.struts2-convention-plugin-2.5.20.jar=lib_struts2\\struts2-convention-plugin-2.5.20.jar
 file.reference.struts2-core-2.5.20.jar=lib_struts2\\struts2-core-2.5.20.jar
+file.reference.struts2-jquery-plugin-4.0.3.jar=lib_struts2\\struts2-jquery-plugin-4.0.3.jar
+file.reference.struts2-json-plugin-2.5.22.jar=lib_struts2\\struts2-json-plugin-2.5.22.jar
 file.reference.xwork-core-2.3.12.jar=lib_struts2\\xwork-core-2.3.12.jar
 includes=**
 j2ee.compile.on.save=true
@@ -68,7 +71,10 @@ javac.classpath=\
     ${file.reference.struts2-convention-plugin-2.5.20.jar}:\
     ${file.reference.struts2-core-2.5.20.jar}:\
     ${file.reference.xwork-core-2.3.12.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.commons-codec-1.14.jar}:\
+    ${file.reference.struts2-jquery-plugin-4.0.3.jar}:\
+    ${file.reference.struts2-json-plugin-2.5.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
