--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.commons-lang3-3.8.1.jar=lib_struts2\\commons-lang3-3.8.1.jar
 file.reference.commons-logging-1.2.jar=lib_struts2\\commons-logging-1.2.jar
 file.reference.freemarker-2.3.28.jar=lib_struts2\\freemarker-2.3.28.jar
 file.reference.javassist-3.20.0-GA.jar=lib_struts2\\javassist-3.20.0-GA.jar
+file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
 file.reference.log4j-api-2.11.1.jar=lib_struts2\\log4j-api-2.11.1.jar
 file.reference.mysql-connector-java-5.1.47.jar=mysql-connector-java-5.1.47.jar
 file.reference.ognl-3.1.21.jar=lib_struts2\\ognl-3.1.21.jar
@@ -74,7 +75,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
     ${file.reference.commons-codec-1.14.jar}:\
     ${file.reference.struts2-jquery-plugin-4.0.3.jar}:\
-    ${file.reference.struts2-json-plugin-2.5.22.jar}
+    ${file.reference.struts2-json-plugin-2.5.22.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
